HREPTWO-16: accept some findbugs recommendations
- make nodewrapper serializable (causing wicket to barf when opening a new window)
- make inner classes static where possible
- implement equals if super does

svn path=/hippo-ecm/trunk/; revision=18661